// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GaugeBinding should be invalid for bad variable 1`] = `
{
  "formula": "yup:string.formula",
}
`;

exports[`GaugeBinding should be invalid for extra fields 1`] = `
{
  "": {
    "key": "yup:object.noUnknown",
    "options": {
      "path": "this",
    },
  },
}
`;

exports[`GaugeBinding should be invalid for incorrect formula 1`] = `
{
  "formula": "yup:string.formula",
}
`;

exports[`GaugeBinding should be invalid for too many variables 1`] = `
{
  "formula": "yup:string.formula",
}
`;

exports[`SectionAdminSettings should be invalid for demo undefined 1`] = `
{
  "demo": "yup:mixed.defined",
}
`;

exports[`SectionAdminSettings should be invalid for extra fields 1`] = `
{
  "": {
    "key": "yup:object.noUnknown",
    "options": {
      "path": "this",
    },
  },
}
`;

exports[`SectionInput should be invalid for bad alt name 1`] = `
{
  "altNames": [
    ,
    "yup:mixed.required",
  ],
}
`;

exports[`SectionInput should be invalid for bad difficulty (fraction) 1`] = `
{
  "difficulty": {
    "key": "yup:mixed.oneOf",
    "options": {
      "values": "0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5, 6",
    },
  },
}
`;

exports[`SectionInput should be invalid for bad difficulty (max) 1`] = `
{
  "difficulty": {
    "key": "yup:mixed.oneOf",
    "options": {
      "values": "0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5, 6",
    },
  },
}
`;

exports[`SectionInput should be invalid for bad difficulty (min) 1`] = `
{
  "difficulty": {
    "key": "yup:mixed.oneOf",
    "options": {
      "values": "0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5, 6",
    },
  },
}
`;

exports[`SectionInput should be invalid for bad distance 1`] = `
{
  "distance": {
    "key": "yup:number.positive",
    "options": {
      "path": "distance",
    },
  },
}
`;

exports[`SectionInput should be invalid for bad drop 1`] = `
{
  "drop": {
    "key": "yup:number.positive",
    "options": {
      "path": "drop",
    },
  },
}
`;

exports[`SectionInput should be invalid for bad duration 1`] = `
{
  "duration": {
    "key": "yup:mixed.oneOf",
    "options": {
      "values": "10, 20, 30, 40, 50",
    },
  },
}
`;

exports[`SectionInput should be invalid for bad extra difficulty 1`] = `
{
  "difficultyXtra": {
    "key": "yup:string.max",
    "options": {
      "max": 32,
      "path": "difficultyXtra",
    },
  },
}
`;

exports[`SectionInput should be invalid for bad gauge id 1`] = `
{
  "gauge": {
    "id": {
      "key": "yup:string.uuid",
      "options": {
        "path": "gauge.id",
      },
    },
  },
}
`;

exports[`SectionInput should be invalid for bad id 1`] = `
{
  "id": {
    "key": "yup:string.uuid",
    "options": {
      "path": "id",
    },
  },
}
`;

exports[`SectionInput should be invalid for bad name 1`] = `
{
  "name": "yup:string.nonEmpty",
}
`;

exports[`SectionInput should be invalid for bad pois 1`] = `
{
  "pois": [
    ,
    {
      "id": {
        "key": "yup:string.uuid",
        "options": {
          "path": "pois[1].id",
        },
      },
    },
  ],
}
`;

exports[`SectionInput should be invalid for bad rating (fraction) 1`] = `
{
  "rating": {
    "key": "yup:mixed.oneOf",
    "options": {
      "values": "0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5",
    },
  },
}
`;

exports[`SectionInput should be invalid for bad rating (max) 1`] = `
{
  "rating": {
    "key": "yup:mixed.oneOf",
    "options": {
      "values": "0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5",
    },
  },
}
`;

exports[`SectionInput should be invalid for bad rating (min) 1`] = `
{
  "rating": {
    "key": "yup:mixed.oneOf",
    "options": {
      "values": "0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5",
    },
  },
}
`;

exports[`SectionInput should be invalid for bad river id 1`] = `
{
  "river": "yup:mixed.newNode",
}
`;

exports[`SectionInput should be invalid for bad season numeric (bad half-month) 1`] = `
{
  "seasonNumeric": [
    ,
    {
      "key": "yup:number.max",
      "options": {
        "max": 23,
        "path": "seasonNumeric[1]",
      },
    },
    {
      "key": "yup:number.min",
      "options": {
        "min": 0,
        "path": "seasonNumeric[2]",
      },
    },
  ],
}
`;

exports[`SectionInput should be invalid for bad season numeric (too many items) 1`] = `
{
  "seasonNumeric": {
    "key": "yup:array.max",
    "options": {
      "max": 24,
      "path": "seasonNumeric",
    },
  },
}
`;

exports[`SectionInput should be invalid for bad shape (bad point) 1`] = `
{
  "shape": [
    ,
    [
      "yup:number.longitude",
    ],
  ],
}
`;

exports[`SectionInput should be invalid for bad shape (not enough points) 1`] = `
{
  "shape": {
    "key": "yup:array.min",
    "options": {
      "min": 2,
      "path": "shape",
    },
  },
}
`;

exports[`SectionInput should be invalid for bad tags 1`] = `
{
  "tags": [
    {
      "key": "yup:mixed.notType",
      "options": {
        "type": "object",
      },
    },
    {
      "key": "yup:mixed.notType",
      "options": {
        "type": "object",
      },
    },
    {
      "key": "yup:mixed.notType",
      "options": {
        "type": "object",
      },
    },
  ],
}
`;

exports[`SectionInput should be invalid for extra fields 1`] = `
{
  "": {
    "key": "yup:object.noUnknown",
    "options": {
      "path": "this",
    },
  },
}
`;

exports[`SectionInput should be invalid for incorrect media 1`] = `
{
  "media": [
    {
      "id": {
        "key": "yup:string.uuid",
        "options": {
          "path": "media[0].id",
        },
      },
    },
  ],
}
`;

exports[`SectionInput should be invalid for new river without name 1`] = `
{
  "river": "yup:mixed.newNode",
}
`;

exports[`SectionInput should be invalid for null media 1`] = `
{
  "media": "yup:mixed.required",
}
`;
